--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=JUnit
+
+info.school.name=JUnit School
+info.app.name=Gradebook
+info.app.version=1.0.0
+info.app.description=Gradebook Application
