--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,11 +3,11 @@ spring:
   datasource:
     url: jdbc:h2:mem:testdb
     username: root
-    password:
+    password: root
     driver-class-name: org.h2.Driver
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
-    show-sql: false
+    show-sql: true
     hibernate:
       ddl-auto: create-drop #Drop existing tables and create new tables. This value is commonly used for integration testing
   h2:
